fix : pre-wrap , article hover

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -70,14 +70,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: right;
   border: 1px solid black;
   resize:vertical;
   flex-shrink: inherit;
   box-sizing: border-box;
   padding: 10px;
   margin-bottom: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  transition: box-shadow 0.3s;
 }
 
 
@@ -132,16 +131,10 @@
   word-wrap: break-word;
 }
 
-.tweet-container :hover {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
-* {
-  word-wrap: break-word;
+.tweet-text {
+  white-space: pre-wrap;
 }
 
-.tweet-container :hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
 
 .footer {
   display: flex;
@@ -183,3 +176,20 @@
   font-style: bold;
   color: red;
 }
+
+@media screen and (max-width: 1024px) {
+  .tweets-container {
+    flex-direction: row; 
+    align-items: flex-start; 
+  }
+  .avatar {
+    order: -1;
+    margin-right: 10px; 
+  }
+}
+
+article:hover {
+  border:2px solid blue;
+    transform: translateY(-5px); 
+    box-shadow: 0px 10px 20px 5px rgba(230, 33, 33, 0.5); 
+ }
